--- a/src/container/GeoWebInterface/components/GeoWebCanvas/styles.module.css
+++ b/src/container/GeoWebInterface/components/GeoWebCanvas/styles.module.css
@@ -1,34 +1,3 @@
-#ar-prompt-img {
-  content: url("/assets/hand.png");
-}
-
-#ar-button {
-  background-image: url("/assets/noun_Augmented\ Reality_3557167\ 1.png");
-  background-repeat: no-repeat;
-  background-size: auto;
-  background-position: center;
-  background-color: rgba(255, 255, 255, 0);
-  position: absolute;
-  right: 2%;
-  top: 0%;
-  height: 64px;
-  width: 64px;
-  border-radius: 18px;
-  border: 1px solid #00000000;
-}
-
-#ar-button:active {
-  background-color: #e8eaed;
-}
-
-#ar-button:focus {
-  outline: none;
-}
-
-#ar-button:focus-visible {
-  outline: 1px solid #4285f4;
-}
-
 @keyframes circle {
   from {
     transform: translateX(-50%) rotate(0deg) translateX(50px) rotate(0deg);
@@ -48,7 +17,7 @@
 }
 
 .clk-left {
-  background-image: url("/assets/noun_right_1920905\ 2.png");
+  background-image: url("/assets/chevron-left.png");
   background-repeat: no-repeat;
   background-size: auto;
   background-position: center;
@@ -60,10 +29,11 @@
   width: 64px;
   border: none;
   z-index: 1;
+  cursor: pointer;
 }
 
 .clk-right {
-  background-image: url("/assets/noun_right_1920905\ 1.png");
+  background-image: url("/assets/chevron-right.png");
   background-repeat: no-repeat;
   background-size: auto;
   background-position: center;
@@ -74,4 +44,5 @@
   height: 64px;
   width: 64px;
   border: none;
+  cursor: pointer;
 }
